# python-template

./: .gitignore  CLAUDE.md  pyproject.toml  template.project-init.md  template.tasks.code-standards.md
config/: .gitkeep  default.toml
src/{project}/: __init__.py  cli.py  config.py  core.py  models.py  shell.py
src/{project}/commands/: __init__.py  items.py
tests/: conftest.py  test_core.py
