[project]
name = "{project}"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "pydantic>=2",
    "httpx>=0.27",
    "sh>=2.1",
]

[project.scripts]
{project} = "{project}.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.8",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
